<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#0099cc"
	tools:context="ng.novateur.novapay.PinEntryActivity">

	<TextView
		android:id="@+id/card_pin_tv"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:keepScreenOn="true"
		android:textStyle="bold"
		android:textSize="50sp"
		android:gravity="center"
		android:layout_margin="16dp"
		android:hint="@string/password_tv_hint"/>
	
	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:columnCount="3"
	    android:columnOrderPreserved="true"
	>
		
		<Button
			android:id="@+id/keypad_btn_1"
			android:text="@string/key_btn_1"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_2"
			android:text="@string/key_btn_2"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_3"
			android:text="@string/key_btn_3"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_4"
			android:text="@string/key_btn_4"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_5"
			android:text="@string/key_btn_5"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_6"
			android:text="@string/key_btn_6"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_7"
			android:text="@string/key_btn_7"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_8"
			android:text="@string/key_btn_8"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_9"
			android:text="@string/key_btn_9"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_clear_all"
			android:text="@string/key_btn_c"
			android:padding="16dp"
			android:onClick="clearAllButtonClicked"
		/>
		
		<Button
			android:id="@+id/keypad_btn_0"
			android:text="@string/key_btn_0"
			android:padding="16dp"
			android:onClick="keyPressed"
		/>
		
		<Button
			android:id="@+id/keypad_btn_backspace"
			android:text="@string/key_btn_x"
			android:padding="16dp"
			android:onClick="deleteButtonClicked"
		/>
	
	</GridLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="bottom|center_horizontal">
		
		<Button
			android:id="@+id/ok_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ok_btn_txt"
			android:onClick="okButtonClicked"/>
		
		<Button
			android:id="@+id/cancel_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel_btn_txt"
			android:onClick="cancelButtonClicked"/>
	
	</LinearLayout>
</LinearLayout>