<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#fff"
	android:weightSum="6">
	
	<!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
	
	<TextView android:id="@+id/amount_tv"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:keepScreenOn="true"
	          android:textStyle="bold"
	          android:textSize="32sp"
	          android:gravity="center"
	          android:padding="16dp"
	          android:hint="@string/amount_tv_hint"/>
	
	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:columnCount="3"
	>
		
		<ImageButton
			android:id="@+id/keypad_btn_1"
			android:text="@string/key_btn_1"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_2"
			android:text="@string/key_btn_2"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_3"
			android:text="@string/key_btn_3"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_4"
			android:text="@string/key_btn_4"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_5"
			android:text="@string/key_btn_5"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_6"
			android:text="@string/key_btn_6"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_7"
			android:text="@string/key_btn_7"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_8"
			android:text="@string/key_btn_8"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_9"
			android:text="@string/key_btn_9"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_clear_all"
			android:text="@string/key_btn_c"
			android:padding="32dp"
			android:onClick="clearAllButtonClicked"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_0"
			android:text="@string/key_btn_0"
			android:padding="32dp"
			android:onClick="keyPressed"
		/>
		
		<ImageButton
			android:id="@+id/keypad_btn_backspace"
			android:text="@string/key_btn_x"
			android:padding="32dp"
			android:onClick="deleteButtonClicked"
		/>
	
	</GridLayout>
	
	<!-- This FrameLayout insets its children based on system windows using
		 android:fitsSystemWindows. -->
	<android.support.v7.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:orientation="horizontal"
		android:layout_gravity="bottom|center_horizontal">
		
		<ImageButton
			android:id="@+id/proceed_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/proceed_btn_txt"
			android:onClick="proceedButtonClicked"/>
		
		<ImageButton
			android:id="@+id/cancel_btn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/cancel_btn_txt"
			android:onClick="proceedButtonClicked"/>
	
	</android.support.v7.widget.LinearLayoutCompat>
</LinearLayout>
