<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="6">
	
	<TextView
		android:id="@+id/amount_tv"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:inputType="none"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@android:color/white"
		android:textSize="52sp"
		android:textStyle="normal"
		android:hint="@string/amount_tv_hint"
		android:keepScreenOn="true"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:weightSum="3"
		android:layout_margin="0dp">
		
		<Button
			android:id="@+id/keypad_btn_1"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_1"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_2"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_2"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_3"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_3"
			android:onClick="keyPressed"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:weightSum="3">
		
		<Button
			android:id="@+id/keypad_btn_4"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_4"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_5"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_5"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_6"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_6"
			android:onClick="keyPressed"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:weightSum="3">
		
		<Button
			android:id="@+id/keypad_btn_7"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_7"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_8"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_8"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_9"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_9"
			android:onClick="keyPressed"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:weightSum="3">
		
		<Button
			android:id="@+id/keypad_btn_clear_all"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_c"
			
			android:onClick="clearAllButtonClicked"/>
		
		<Button
			android:id="@+id/keypad_btn_0"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_0"
			android:onClick="keyPressed"/>
		
		<Button
			android:id="@+id/keypad_btn_backspace"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/key_btn_x"
			android:onClick="deleteButtonClicked"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:weightSum="2">
		
		<Button
			android:id="@+id/proceed_btn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/proceed_btn_txt"
			android:onClick="proceedButtonClicked"/>
		
		<Button
			android:id="@+id/cancel_btn"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:scaleType="fitCenter"
			android:text="@string/cancel_btn_txt"
			android:onClick="cancelButtonClicked"/>
	</LinearLayout>
</LinearLayout>